# Operating-System

./: .Operating.Systems.4th.Edi.pdf.icloud  README.md
Labs/lab1/: .lab1_wx657.zip.icloud  CMakeLists.txt  Makefile  a.out  fix  fizzbuzz.py  lab1.cpp  linker 2.cpp  linker.cpp  linkeroutput  t2.txt
Labs/lab1/lab1samples/: input-2
Labs/lab1/submission/: .lab1_wx657.zip.icloud
Labs/lab1/submission/lab1_wx657/: Makefile
Labs/lab1/testcase/: Makefile  symboltable.txt  t1.txt  t2.txt  t3.txt  test
Labs/lab2/: CMakeLists.txt
Labs/lab2/lab2_assign/: CMakeLists.txt  different  input0  outputfile  rfile_small
Labs/lab2/lab2_assign/output/: LOG
Labs/lab2/lab2_assign/refout/: out_3_E4
Labs/lab2/lab2_assign/src/: DESLayer.cpp  DESLayer.h  a.out  event.cpp  event.h  main  main.cpp  process.cpp  process.h  scheduler.cpp  scheduler.h  struct_virtual.c
Labs/lab2/submission/: .lab2_657.zip.icloud
Labs/lab2/submission/lab2_wx657/: Makefile  event.cpp  main.cpp  scheduler.cpp
Labs/lab3/lab3_assign/output/: out10_16_a  out10_32_a  out11_16_a  out11_32_a  out1_16_a  out2_16_a  out3_16_a  out3_32_a  out4_16_a  out4_32_a  out5_16_a  out5_32_a  out6_16_a  out6_32_a  out7_16_a  out7_32_a  out8_16_a  out8_32_a  out9_16_a  out9_32_a
Labs/lab3/lab3_assign/src/: CMakeLists.txt  Makefile  PTE.h  PTE.h.gch  Pager_Algo.cpp  Pager_Algo.h  diff  frame.h  (+10 more)
Labs/lab3/submission/: .lab3_wx657.zip.icloud
Labs/lab4/inputs/: runit.sh
Labs/lab4/output/: LOG
Labs/lab4/src/: CMakeLists.txt  Makefile  main.cpp  scheduler.cpp  scheduler.h
Labs/lab4/submission/: .lab4_wx657.zip.icloud
(+10 files in other folders)
